--- a/Book_Store/shop/templates/checkout.html
+++ b/Book_Store/shop/templates/checkout.html
@@ -1,20 +1,16 @@
-
 {% extends "base.html" %}
 
 {% block content %}
 
-<h2>Bascket</h2>
-<ul>
-    {% for item in items %}
-        <li>{{ item.book.title }} - {{ item.quantity }} buc.</li>
-    {% endfor %}
-</ul>
+<h2>Basket</h2>
 
-<form method="POST" action="{% url 'checkout' %}">
-    {% csrf_token %}
-    <button type="submit">Finalizeaza comanda</button>
+  <h3>Total: {{ total_general }} RON</h3>
+
+<form method="post" action="{% url 'checkout' %}">
+  {% csrf_token %}
+  
+  <a class="complete-order-button" href="{% url 'checkout_success' %}">Finish your order</a>
+
 </form>
 
 {% endblock %}
-
-
