--- a/Book_Store/shop/templates/book_list.html
+++ b/Book_Store/shop/templates/book_list.html
@@ -2,11 +2,13 @@
 
 {% block content %}
 
+
+<a href="{% url 'cart' %}" class="cart-button"> Your Cart</a>
+
 <h2 class="centered-title">Book List</h2>
 
 <div class="table-container">
-
-<table class="table table-border">
+<table>
     <thead>
         <tr>
             <th>ID</th>
