--- a/Book_Store/shop/static/base.css
+++ b/Book_Store/shop/static/base.css
@@ -10,6 +10,7 @@ body {
     align-items: center;
     justify-content: flex-start;
 }
+
 .base_header {
     height: 60px;
     left: 0;
@@ -23,8 +24,52 @@ body {
 }
 
 .cart-button {
+    display: inline-block;
+    background-color: rgb(219, 163, 163);
     margin-left: auto;
-    background-color: magenta;
+    padding: 12px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+}
+
+.profile {
+    width: 110px;
+    height: 40px;
+    border-radius: 25px;
+    background-color: #b22222; 
+    text-align: center;
+    align-content: center;
+    color: white;
+    font-weight: bold;
+    margin-left: auto;
+}
+
+.login-button {
+    display: inline-block;
+    padding: 12px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 25px;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    background-color: #b22222; 
+    text-align: center;
+    align-content: center;
+    color: white;
+}
+
+.logout-button {
+    display: inline-block;
+    padding: 12px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 25px;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    background-color: #b22222; 
+    text-align: center;
+    align-content: center;
+    color: white;
 }
 
 .base_footer {
@@ -39,20 +84,9 @@ body {
     color: white;
 }
 
-.profile {
-    width: 80px;
-    height: 60px;
-    border-radius: 50%;
-    background-color: #b22222; 
-    text-align: center;
-    align-content: center;
-    color: white;
-    font-weight: bold;
-    line-height: 60px;
-}
 
 .content_container { 
-    width: 800px;
+    width: 900px;
     height: auto;
     margin-top: 76px;
     margin-bottom: 76px;
@@ -62,6 +96,8 @@ body {
     border-radius: 10px;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .centered-title {
@@ -72,7 +108,6 @@ body {
     color: #800000;
 }
 
-
 .table-container {
     display: flex;
     justify-content: center; 
@@ -81,13 +116,16 @@ body {
 }
 
 table {
-    border-collapse: collapse;
+    border-spacing: 0;
+    border: 1px solid #800000;
+    border-radius: 10px;
+    overflow: hidden;
     width: auto;
 }
 
 table th, table td {
-    border: 1px solid rgb(187, 118, 118);
-    padding: 5px 5px;
+    border: 1px solid #800000;
+    padding: 5px 20px;
     text-align: center;
 }
 
@@ -109,6 +147,7 @@ table th, table td {
     border: none;
     border-radius: 5px;
     box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    margin-right: auto;
 }
 
 .complete-order-button {
@@ -130,3 +169,4 @@ table th, table td {
     border-radius: 5px;
     box-shadow: 0 4px 6px rgba(0,0,0,0.1);
 }
+
