--- a/Book_Store/shop/templates/base.html
+++ b/Book_Store/shop/templates/base.html
@@ -17,7 +17,7 @@
   <body>
     <div class="app_container" style="position: relative; width: 100%;">
     <header class="base_header">
-      <a href="{% url 'login' %}"> Log in </a>
+      <a class="login-button "href="{% url 'login' %}"> Log in </a>
       
       <div class="profile">
         {% if user.is_authenticated%}
@@ -25,8 +25,6 @@
         {% else %} None 
         {%endif %}
       </div>
-      
-      <a href="{% url 'cart' %}" class="cart-button"> Your Bascket</a>
 
     </header>
 
@@ -35,7 +33,7 @@
     </section>
 
     <footer class="base_footer">
-      <a href="{% url 'logout' %}"> Log Out </a>
+      <a class="logout-button" href="{% url 'logout' %}"> Log Out </a>
     </footer> 
     </div>
 
